--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   ],
   "devDependencies": {
     "@babel/preset-env": "7.18.6",
-    "babel-loader": "8.2.5",
     "@htmlacademy/editorconfig-cli": "1.x",
-    "eslint": "7.32.0",
-    "stylelint": "13.13.1",
     "autoprefixer": "10.4.7",
+    "babel-loader": "8.2.5",
     "browser-sync": "2.27.10",
+    "circular-dependency-plugin": "5.2.2",
+    "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "del": "6.1.1",
+    "duplicate-package-checker-webpack-plugin": "3.0.0",
+    "eslint": "7.32.0",
     "gulp": "4.0.2",
     "gulp-csso": "4.0.1",
     "gulp-file-include": "2.3.0",
@@ -48,11 +50,10 @@
     "gulp-webp": "4.0.1",
     "postcss": "8.4.14",
     "sass": "1.53.0",
+    "stylelint": "13.13.1",
+    "tailwindcss": "^3.4.10",
     "webpack": "4.42.0",
-    "webpack-stream": "5.2.1",
-    "circular-dependency-plugin": "5.2.2",
-    "clean-webpack-plugin": "3.0.0",
-    "duplicate-package-checker-webpack-plugin": "3.0.0"
+    "webpack-stream": "5.2.1"
   },
   "engines": {
     "node": ">=16.15.1"
